# marginalia

./: .gitignore  PRODUCTION_CHECKLIST.md  README.md  docker-compose.yml  drawing-feature-plan.md  marginalia-planning.md  package.json
apps/api/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 10edbd059f4e_add_user_llm_keys_and_default_provider.py  6b14befe7c85_init.py  a3f2c1d4e5b6_add_user_settings.py  ab7b3408fdcf_add_per_user_upload_limit_overrides.py  c4d5e6f7a8b9_add_bookmarks.py  d08a5318a2b0_add_is_admin_and_is_suspended_to_users.py  e1f2a3b4c5d6_add_is_verified_to_users.py  f2a3b4c5d6e7_add_documents_cursor_index.py  g3b4c5d6e7f8_add_search_trgm_indexes.py  h4c5d6e7f8a9_add_query_indexes.py  i5d6e7f8a9b0_add_sticky_notes.py  j6e7f8a9b0c1_add_document_shares.py  k7f8a9b0c1d2_add_drawing_strokes.py  l8a9b0c1d2e3_add_drawing_tool.py  m9b0c1d2e3f4_add_thumbnail_key_to_documents.py
apps/api/app/: main.py
apps/api/app/core/: config.py  constants.py  crypto.py  database.py  deps.py  email.py  rate_limit.py  redis_client.py  security.py
apps/api/app/models/: __init__.py  bookmark.py  collection.py  document.py  document_share.py  drawing_stroke.py  highlight.py  note.py  (+4 more)
apps/api/tests/: conftest.py  test_admin.py  test_auth.py  test_bookmarks.py  test_collections.py  test_documents.py  test_drawings.py  test_email_verification.py  test_highlights.py  test_llm_keys.py  test_notes.py  test_password_reset.py  test_rate_limit.py  test_settings.py  test_translate.py
(+93 files in other folders)
