[tool.poetry]
name = "marginalia-api"
version = "0.1.0"
description = "Marginalia PDF Reader - FastAPI Backend"
authors = ["yyubin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
alembic = "^1.14.0"
asyncpg = "^0.30.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
bcrypt = "^4.0.0"
python-multipart = "^0.0.12"
boto3 = "^1.35.0"
anthropic = "^0.40.0"
pydantic = { extras = ["email"], version = "^2.10.0" }
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.0"
httpx = "^0.28.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"
ruff = "^0.8.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
